--- a/index.html
+++ b/index.html
@@ -20,36 +20,30 @@ body{margin:0;background:var(--bg)}
 .tab.active{background:var(--accent);color:#fff}
 .card{background:#fff;border-radius:12px;padding:10px;margin-bottom:10px;border-left:5px solid var(--accent)}
 .day{page-break-before:always}
-.day h3{margin:0 0 8px 0;background:#e3f2fd;padding:6px;border-radius:8px}
-.visit-grid{display:grid;grid-template-columns:60px 1fr 120px 80px 80px;gap:6px;font-size:13px}
-.visit-grid div{padding:6px;border-bottom:1px solid #ddd}
+.day h3{margin:0 0 8px;background:#e3f2fd;padding:6px;border-radius:8px}
 label{font-weight:bold;font-size:13px;display:block;margin-top:6px}
 input,textarea,select{width:100%;padding:8px;border-radius:6px;border:1px solid var(--border)}
-textarea{min-height:50px}
 .actions{display:grid;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));gap:10px;margin-top:16px}
 button{padding:14px;border:none;border-radius:12px;font-size:15px}
 .save{background:#43a047;color:#fff}
 .pdf{background:#e53935;color:#fff}
 .excel{background:#1b5e20;color:#fff}
-@media print{
- .tabs,.actions,button{display:none}
- body{background:#fff}
-}
 </style>
 </head>
+
 <body>
 
 <div class="header">HAFTALIK ZİYARET RAPORU</div>
 
-<div class="container" id="report">
+<div class="container">
 <div class="info">
 <select id="personelSelect"></select>
 <div style="display:flex;gap:6px">
-  <input id="yeniPersonel" placeholder="Yeni Personel Adı">
-  <button type="button" onclick="personelEkle()">Ekle</button>
-  <button type="button" onclick="personelSil()">Sil</button>
+<input id="yeniPersonel" placeholder="Yeni Personel">
+<button onclick="personelEkle()">Ekle</button>
+<button onclick="personelSil()">Sil</button>
 </div>
-<input id="bolge" placeholder="Bölge / Şehir">
+<input id="bolge" placeholder="Bölge">
 <input id="tarih" placeholder="Tarih Aralığı">
 <input id="plaka" placeholder="Araç Plaka">
 <input id="kmBaslangic" type="number" placeholder="Başlangıç KM">
@@ -66,131 +60,118 @@ button{padding:14px;border:none;border-radius:12px;font-size:15px}
 
 <div id="days"></div>
 
-<div class="card" style="background:#e3f2fd;border-left:6px solid #0b2a55">
- <h2 style="margin:0 0 8px 0;text-align:center">HAFTALIK YÖNETİCİ ÖZETİ</h2>
- <div style="display:grid;grid-template-columns:repeat(4,1fr);gap:8px;text-align:center;font-size:16px">
-  <div><b>Toplam Ziyaret</b><br><span id="haftaZiyaret">0</span></div>
-  <div><b>Toplam Numune</b><br><span id="haftaNumune">0</span></div>
-  <div><b>Toplam Katalog</b><br><span id="haftaKatalog">0</span></div>
-  <div><b>Toplam KM</b><br><span id="haftaKM">0</span></div>
- </div>
+<div class="card" style="background:#e3f2fd">
+<h3 style="text-align:center">HAFTALIK ÖZET</h3>
+<div style="display:grid;grid-template-columns:repeat(4,1fr);text-align:center">
+<div><b>Ziyaret</b><br><span id="haftaZiyaret">0</span></div>
+<div><b>Numune</b><br><span id="haftaNumune">0</span></div>
+<div><b>Katalog</b><br><span id="haftaKatalog">0</span></div>
+<div><b>KM</b><br><span id="haftaKM">0</span></div>
+</div>
 </div>
 
 <div class="actions">
-<button style="background:#455a64;color:#fff" onclick="haftaKapat()">Haftayı Kapat</button>
-<button style="background:#ff9800;color:#fff" onclick="yeniHafta()">Yeni Hafta Başlat</button>
+<button onclick="haftaKapat()">Haftayı Kapat</button>
+<button onclick="yeniHafta()">Yeni Hafta</button>
 <button class="save" onclick="saveData()">Kaydet</button>
 <button class="pdf" onclick="exportPDF()">PDF</button>
 <button class="excel" onclick="exportExcel()">Excel</button>
-<button style="background:#25D366;color:#fff" onclick="shareWhatsApp()">WhatsApp PDF</button>
+<button style="background:#25D366;color:#fff" onclick="shareWhatsApp()">WhatsApp</button>
 </div>
 </div>
 
 <script>
-/************** TEMEL DURUM **************/
-const STORAGE_KEY='haftalikRapor_v2';
+const STORAGE_KEY='haftalikRapor_final';
 
-/************** PERSONEL **************/
-const varsayilanPersoneller=['Hasret Gökot','Ömür Kaplan','Gamze Kaç','Işıl Engin'];
-let personelListe=JSON.parse(localStorage.getItem('personelListe'))||varsayilanPersoneller;
-localStorage.setItem('personelListe',JSON.stringify(personelListe));
+/* PERSONEL */
+let personelListe=JSON.parse(localStorage.getItem('personelListe'))||['Hasret Gökot','Ömür Kaplan','Gamze Kaç','Işıl Engin'];
 const personelSelect=document.getElementById('personelSelect');
-const yeniPersonel=document.getElementById('yeniPersonel');
 function renderPersonel(){personelSelect.innerHTML=personelListe.map(p=>`<option>${p}</option>`).join('');}
 renderPersonel();
-function personelEkle(){const a=yeniPersonel.value.trim();if(!a)return;personelListe.push(a);localStorage.setItem('personelListe',JSON.stringify(personelListe));renderPersonel();yeniPersonel.value='';}
-function personelSil(){const a=personelSelect.value;if(!a)return;personelListe=personelListe.filter(p=>p!==a);localStorage.setItem('personelListe',JSON.stringify(personelListe));renderPersonel();}
+function personelEkle(){if(yeniPersonel.value){personelListe.push(yeniPersonel.value);localStorage.setItem('personelListe',JSON.stringify(personelListe));renderPersonel();yeniPersonel.value='';}}
+function personelSil(){personelListe=personelListe.filter(p=>p!==personelSelect.value);localStorage.setItem('personelListe',JSON.stringify(personelListe));renderPersonel();}
 
-/************** GUNLER & ZIYARETLER **************/
-const daysDiv=document.getElementById('days');
+/* GÜNLER */
 const gunAdlari=['Pazartesi','Salı','Çarşamba','Perşembe','Cuma'];
-const visitCount=15;
-for(let d=0;d<5;d++){
- let html=`<div class="day" data-day="${d}" style="display:${d===0?'block':'none'}"><h3>${gunAdlari[d]}</h3>`;
+const visitCount=10;
+const daysDiv=document.getElementById('days');
+gunAdlari.forEach((g,d)=>{
+ let h=`<div class="day" style="display:${d? 'none':'block'}"><h3>${g}</h3>`;
  for(let i=1;i<=visitCount;i++){
-  html+=`<div class="card">
-   <b>${i}. Ziyaret</b>
-   <input type="time" data-k="d${d}v${i}_time">
-   <input placeholder="Firma / Cari" data-k="d${d}v${i}_firma">
-   <select data-k="d${d}v${i}_amac">
-    <option value="">Amaç</option>
-    <option>Tanışma</option>
-    <option>Tekrar Ziyaret</option>
-    <option>İade</option>
-    <option>Ürün Tanıtımı</option>
-   </select>
-   <label><input type="checkbox" data-k="d${d}v${i}_numune"> Numune</label>
-   <label><input type="checkbox" data-k="d${d}v${i}_katalog"> Katalog</label>
+  h+=`<div class="card">
+  <b>${i}. Ziyaret</b>
+  <input type="time" data-k="d${d}v${i}_time">
+  <input placeholder="Firma" data-k="d${d}v${i}_firma">
+  <select data-k="d${d}v${i}_amac"><option></option><option>Tanışma</option><option>Tekrar</option></select>
+  <label><input type="checkbox" data-k="d${d}v${i}_numune"> Numune</label>
+  <label><input type="checkbox" data-k="d${d}v${i}_katalog"> Katalog</label>
   </div>`;
  }
- html+='</div>';
- daysDiv.innerHTML+=html;
-}
+ h+='</div>';
+ daysDiv.innerHTML+=h;
+});
 
 function openDay(i){
- document.querySelectorAll('.tab').forEach((t,idx)=>t.classList.toggle('active',idx===i));
  document.querySelectorAll('.day').forEach((d,idx)=>d.style.display=idx===i?'block':'none');
+ document.querySelectorAll('.tab').forEach((t,idx)=>t.classList.toggle('active',idx===i));
 }
 
-/************** KAYDET / YUKLE **************/
+/* KAYIT */
 function saveData(){
  const data={meta:{personel:personelSelect.value,bolge:bolge.value,tarih:tarih.value,plaka:plaka.value,kmBas:kmBaslangic.value,kmBit:kmBitis.value},ziyaretler:{}};
- document.querySelectorAll('[data-k]').forEach(e=>{
-  data.ziyaretler[e.dataset.k]= e.type==='checkbox'?e.checked:e.value;
- });
+ document.querySelectorAll('[data-k]').forEach(e=>data.ziyaretler[e.dataset.k]=e.type==='checkbox'?e.checked:e.value);
  localStorage.setItem(STORAGE_KEY,JSON.stringify(data));
  alert('Kaydedildi');
 }
 
-function loadData(){
- const data=JSON.parse(localStorage.getItem(STORAGE_KEY));
- if(!data) return;
- bolge.value=data.meta.bolge||'';tarih.value=data.meta.tarih||'';plaka.value=data.meta.plaka||'';
- kmBaslangic.value=data.meta.kmBas||'';kmBitis.value=data.meta.kmBit||'';
- document.querySelectorAll('[data-k]').forEach(e=>{
-  const v=data.ziyaretler[e.dataset.k];
-  if(e.type==='checkbox') e.checked=!!v; else e.value=v||'';
- });
-}
-loadData();
-
-/************** YONETICI PDF **************/
+/* PDF */
 function exportPDF(){
- const wrapper=document.createElement('div');
- const data=JSON.parse(localStorage.getItem(STORAGE_KEY));
- if(!data){alert('Kayit yok');return;}
-
- let z=0,n=0,k=0;
- Object.keys(data.ziyaretler).forEach(x=>{
-  if(x.endsWith('firma') && data.ziyaretler[x]) z++;
-  if(x.endsWith('numune') && data.ziyaretler[x]) n++;
-  if(x.endsWith('katalog') && data.ziyaretler[x]) k++;
- });
- const km=(Number(data.meta.kmBit)-Number(data.meta.kmBas))||0;
-
- wrapper.innerHTML=`<h1>HAFTALIK YÖNETİCİ RAPORU</h1>
- <p><b>Personel:</b> ${data.meta.personel} | <b>Bölge:</b> ${data.meta.bolge}</p>
- <table border="1" cellspacing="0" cellpadding="6" width="100%">
- <tr><th>Toplam Ziyaret</th><th>Numune</th><th>Katalog</th><th>KM</th></tr>
- <tr><td>${z}</td><td>${n}</td><td>${k}</td><td>${km}</td></tr>
- </table><br>`;
-
+ const d=JSON.parse(localStorage.getItem(STORAGE_KEY)); if(!d)return;
+ let wrap=document.createElement('div');
+ wrap.innerHTML=`<h1>HAFTALIK RAPOR</h1>`;
  gunAdlari.forEach((g,di)=>{
-  let rows='';((g,di)=>{
-  let rows='';
+  let r='';
   for(let i=1;i<=visitCount;i++){
-   const f=data.ziyaretler[`d${di}v${i}_firma`];
-   if(!f) continue;
-   rows+=`<tr><td>${data.ziyaretler[`d${di}v${i}_time`]||''}</td><td>${f}</td><td>${data.ziyaretler[`d${di}v${i}_amac`]||''}</td><td>${data.ziyaretler[`d${di}v${i}_numune`]?'✔':''}</td><td>${data.ziyaretler[`d${di}v${i}_katalog`]?'✔':''}</td></tr>`;
+   const f=d.ziyaretler[`d${di}v${i}_firma`];
+   if(f) r+=`<tr><td>${f}</td></tr>`;
   }
-  if(rows){
-   wrapper.innerHTML+=`<h2>${g}</h2><table border="1" cellspacing="0" cellpadding="6" width="100%"><tr><th>Saat</th><th>Firma</th><th>Amaç</th><th>Numune</th><th>Katalog</th></tr>${rows}</table><br>`;
+  if(r) wrap.innerHTML+=`<h2>${g}</h2><table border="1">${r}</table>`;
+ });
+ html2pdf().from(wrap).save('haftalik_rapor.pdf');
+}
+
+/* EXCEL */
+function exportExcel(){
+ const d=JSON.parse(localStorage.getItem(STORAGE_KEY)); if(!d)return;
+ const rows=[['Gün','Firma']];
+ gunAdlari.forEach((g,di)=>{
+  for(let i=1;i<=visitCount;i++){
+   const f=d.ziyaretler[`d${di}v${i}_firma`];
+   if(f) rows.push([g,f]);
   }
  });
+ const wb=XLSX.utils.book_new();
+ XLSX.utils.book_append_sheet(wb,XLSX.utils.aoa_to_sheet(rows),'Rapor');
+ XLSX.writeFile(wb,'haftalik_rapor.xlsx');
+}
 
- html2pdf().from(wrapper).save('yonetici_raporu.pdf');
+/* WHATSAPP */
+function shareWhatsApp(){
+ exportPDF();
+ setTimeout(()=>window.open('https://wa.me/?text=Haftalık%20raporum','_blank'),1500);
+}
+
+/* HAFTA KAPAT */
+function haftaKapat(){
+ document.querySelectorAll('input,select,button').forEach(e=>e.disabled=true);
+}
+
+/* YENİ HAFTA */
+function yeniHafta(){
+ if(confirm('Tüm veriler silinsin mi?')){
+ localStorage.clear(); location.reload();
+ }
 }
 </script>
 </body>
 </html>
-
