--- a/index.html
+++ b/index.html
@@ -2,175 +2,108 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Haftalık Ziyaret Raporu</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
 <style>
-:root{--primary:#0b2a55;--accent:#1e88e5;--border:#e0e0e0;--bg:#f4f6f8}
-*{box-sizing:border-box;font-family:Arial}
-body{margin:0;background:var(--bg)}
-.header{background:var(--primary);color:#fff;padding:16px;text-align:center}
+body{font-family:Arial;background:#f4f6f8;margin:0}
 .container{max-width:900px;margin:auto;padding:12px}
-.info{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-bottom:12px}
-.tabs{display:flex;gap:6px;margin-bottom:12px}
-.tab{flex:1;padding:10px;border:none;background:#ddd;font-weight:bold}
-.tab.active{background:var(--accent);color:#fff}
-.card{background:#fff;border-radius:12px;padding:10px;margin-bottom:10px;border-left:5px solid var(--accent)}
-.day{page-break-before:always}
-.day h3{margin:0 0 8px;background:#e3f2fd;padding:6px;border-radius:8px}
-label{font-weight:bold;font-size:13px;display:block;margin-top:6px}
-input,textarea,select{width:100%;padding:8px;border-radius:6px;border:1px solid var(--border)}
-.actions{display:grid;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));gap:10px;margin-top:16px}
-button{padding:14px;border:none;border-radius:12px;font-size:15px}
-.save{background:#43a047;color:#fff}
-.pdf{background:#e53935;color:#fff}
-.excel{background:#1b5e20;color:#fff}
+.card{background:#fff;padding:10px;margin-bottom:10px;border-radius:8px}
+button{padding:10px;margin:5px}
 </style>
 </head>
 
 <body>
-
-<div class="header">HAFTALIK ZİYARET RAPORU</div>
-
 <div class="container">
-<div class="info">
-<select id="personelSelect"></select>
-<div style="display:flex;gap:6px">
-<input id="yeniPersonel" placeholder="Yeni Personel">
-<button onclick="personelEkle()">Ekle</button>
-<button onclick="personelSil()">Sil</button>
-</div>
-<input id="bolge" placeholder="Bölge">
-<input id="tarih" placeholder="Tarih Aralığı">
-<input id="plaka" placeholder="Araç Plaka">
-<input id="kmBaslangic" type="number" placeholder="Başlangıç KM">
-<input id="kmBitis" type="number" placeholder="Bitiş KM">
-</div>
 
-<div class="tabs">
-<button class="tab active" onclick="openDay(0)">PZT</button>
-<button class="tab" onclick="openDay(1)">SAL</button>
-<button class="tab" onclick="openDay(2)">ÇRŞ</button>
-<button class="tab" onclick="openDay(3)">PRŞ</button>
-<button class="tab" onclick="openDay(4)">CUMA</button>
-</div>
+<h2>Haftalık Ziyaret Raporu</h2>
 
-<div id="days"></div>
+<input id="personel" placeholder="Personel"><br>
+<input id="bolge" placeholder="Bölge"><br>
 
-<div class="card" style="background:#e3f2fd">
-<h3 style="text-align:center">HAFTALIK ÖZET</h3>
-<div style="display:grid;grid-template-columns:repeat(4,1fr);text-align:center">
-<div><b>Ziyaret</b><br><span id="haftaZiyaret">0</span></div>
-<div><b>Numune</b><br><span id="haftaNumune">0</span></div>
-<div><b>Katalog</b><br><span id="haftaKatalog">0</span></div>
-<div><b>KM</b><br><span id="haftaKM">0</span></div>
-</div>
-</div>
+<div id="visits"></div>
 
-<div class="actions">
-<button onclick="haftaKapat()">Haftayı Kapat</button>
-<button onclick="yeniHafta()">Yeni Hafta</button>
-<button class="save" onclick="saveData()">Kaydet</button>
-<button class="pdf" onclick="exportPDF()">PDF</button>
-<button class="excel" onclick="exportExcel()">Excel</button>
-<button style="background:#25D366;color:#fff" onclick="shareWhatsApp()">WhatsApp</button>
-</div>
+<button onclick="saveData()">Kaydet</button>
+<button onclick="loadData()">Yükle</button>
+<button onclick="exportPDF()">PDF</button>
+<button onclick="exportExcel()">Excel</button>
+
 </div>
 
 <script>
-const STORAGE_KEY='haftalikRapor_final';
+const KEY='haftalik_test';
 
-/* PERSONEL */
-let personelListe=JSON.parse(localStorage.getItem('personelListe'))||['Hasret Gökot','Ömür Kaplan','Gamze Kaç','Işıl Engin'];
-const personelSelect=document.getElementById('personelSelect');
-function renderPersonel(){personelSelect.innerHTML=personelListe.map(p=>`<option>${p}</option>`).join('');}
-renderPersonel();
-function personelEkle(){if(yeniPersonel.value){personelListe.push(yeniPersonel.value);localStorage.setItem('personelListe',JSON.stringify(personelListe));renderPersonel();yeniPersonel.value='';}}
-function personelSil(){personelListe=personelListe.filter(p=>p!==personelSelect.value);localStorage.setItem('personelListe',JSON.stringify(personelListe));renderPersonel();}
-
-/* GÜNLER */
-const gunAdlari=['Pazartesi','Salı','Çarşamba','Perşembe','Cuma'];
-const visitCount=10;
-const daysDiv=document.getElementById('days');
-gunAdlari.forEach((g,d)=>{
- let h=`<div class="day" style="display:${d? 'none':'block'}"><h3>${g}</h3>`;
- for(let i=1;i<=visitCount;i++){
-  h+=`<div class="card">
-  <b>${i}. Ziyaret</b>
-  <input type="time" data-k="d${d}v${i}_time">
-  <input placeholder="Firma" data-k="d${d}v${i}_firma">
-  <select data-k="d${d}v${i}_amac"><option></option><option>Tanışma</option><option>Tekrar</option></select>
-  <label><input type="checkbox" data-k="d${d}v${i}_numune"> Numune</label>
-  <label><input type="checkbox" data-k="d${d}v${i}_katalog"> Katalog</label>
-  </div>`;
- }
- h+='</div>';
- daysDiv.innerHTML+=h;
-});
-
-function openDay(i){
- document.querySelectorAll('.day').forEach((d,idx)=>d.style.display=idx===i?'block':'none');
- document.querySelectorAll('.tab').forEach((t,idx)=>t.classList.toggle('active',idx===i));
+/* ZİYARETLERİ OLUŞTUR */
+const visitsDiv=document.getElementById('visits');
+for(let i=1;i<=5;i++){
+ visitsDiv.innerHTML+=`
+ <div class="card">
+  <b>${i}. Ziyaret</b><br>
+  <input placeholder="Firma" data-k="v${i}_firma">
+  <input placeholder="Amaç" data-k="v${i}_amac">
+ </div>`;
 }
 
-/* KAYIT */
+/* KAYDET */
 function saveData(){
- const data={meta:{personel:personelSelect.value,bolge:bolge.value,tarih:tarih.value,plaka:plaka.value,kmBas:kmBaslangic.value,kmBit:kmBitis.value},ziyaretler:{}};
- document.querySelectorAll('[data-k]').forEach(e=>data.ziyaretler[e.dataset.k]=e.type==='checkbox'?e.checked:e.value);
- localStorage.setItem(STORAGE_KEY,JSON.stringify(data));
+ const data={
+  personel:personel.value,
+  bolge:bolge.value,
+  visits:{}
+ };
+ document.querySelectorAll('[data-k]').forEach(e=>{
+  data.visits[e.dataset.k]=e.value;
+ });
+ localStorage.setItem(KEY,JSON.stringify(data));
  alert('Kaydedildi');
+}
+
+/* YÜKLE */
+function loadData(){
+ const data=JSON.parse(localStorage.getItem(KEY));
+ if(!data){alert('Kayıt yok');return;}
+ personel.value=data.personel||'';
+ bolge.value=data.bolge||'';
+ document.querySelectorAll('[data-k]').forEach(e=>{
+  e.value=data.visits[e.dataset.k]||'';
+ });
 }
 
 /* PDF */
 function exportPDF(){
- const d=JSON.parse(localStorage.getItem(STORAGE_KEY)); if(!d)return;
- let wrap=document.createElement('div');
- wrap.innerHTML=`<h1>HAFTALIK RAPOR</h1>`;
- gunAdlari.forEach((g,di)=>{
-  let r='';
-  for(let i=1;i<=visitCount;i++){
-   const f=d.ziyaretler[`d${di}v${i}_firma`];
-   if(f) r+=`<tr><td>${f}</td></tr>`;
-  }
-  if(r) wrap.innerHTML+=`<h2>${g}</h2><table border="1">${r}</table>`;
+ const data=JSON.parse(localStorage.getItem(KEY));
+ if(!data){alert('Önce kaydet');return;}
+
+ const div=document.createElement('div');
+ div.innerHTML=`<h1>Haftalık Rapor</h1><p>${data.personel} - ${data.bolge}</p>`;
+
+ Object.keys(data.visits).forEach(k=>{
+  if(data.visits[k])
+   div.innerHTML+=`<p>${data.visits[k]}</p>`;
  });
- html2pdf().from(wrap).save('haftalik_rapor.pdf');
+
+ html2pdf().from(div).save('rapor.pdf');
 }
 
 /* EXCEL */
 function exportExcel(){
- const d=JSON.parse(localStorage.getItem(STORAGE_KEY)); if(!d)return;
- const rows=[['Gün','Firma']];
- gunAdlari.forEach((g,di)=>{
-  for(let i=1;i<=visitCount;i++){
-   const f=d.ziyaretler[`d${di}v${i}_firma`];
-   if(f) rows.push([g,f]);
-  }
+ const data=JSON.parse(localStorage.getItem(KEY));
+ if(!data){alert('Önce kaydet');return;}
+
+ const rows=[['Alan','Değer']];
+ rows.push(['Personel',data.personel]);
+ rows.push(['Bölge',data.bolge]);
+
+ Object.keys(data.visits).forEach(k=>{
+  rows.push([k,data.visits[k]]);
  });
+
  const wb=XLSX.utils.book_new();
- XLSX.utils.book_append_sheet(wb,XLSX.utils.aoa_to_sheet(rows),'Rapor');
- XLSX.writeFile(wb,'haftalik_rapor.xlsx');
-}
-
-/* WHATSAPP */
-function shareWhatsApp(){
- exportPDF();
- setTimeout(()=>window.open('https://wa.me/?text=Haftalık%20raporum','_blank'),1500);
-}
-
-/* HAFTA KAPAT */
-function haftaKapat(){
- document.querySelectorAll('input,select,button').forEach(e=>e.disabled=true);
-}
-
-/* YENİ HAFTA */
-function yeniHafta(){
- if(confirm('Tüm veriler silinsin mi?')){
- localStorage.clear(); location.reload();
- }
+ const ws=XLSX.utils.aoa_to_sheet(rows);
+ XLSX.utils.book_append_sheet(wb,ws,'Rapor');
+ XLSX.writeFile(wb,'rapor.xlsx');
 }
 </script>
 </body>
